[package]
name = "sfbp"
version = "0.1.0"
authors = ["Bill Meany <billedatat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
log = "0.4"
fern = "0.6"
walkdir = "2"
filetime = "0.2.13"
exitcode = "1.1.2"
